Fix attribution align and style

--- a/style.css
+++ b/style.css
@@ -179,18 +179,19 @@ ul {
 /*the text is not cooperating, why*/
 #text {
   font-style: italic;
-  font-weight: 300;
+  font-weight: 100;
   font-size: 36px;
   color: #1F2937;
 }
+
+/* until here */
 
 #attribution {
     text-align: right;
     font-weight: 700;
     align-self: flex-end;
+    font-size: 24px;
 }
-
-/* until here */
 
 .cta {
     display: flex;
